Upgrade JDK / Dependencies